--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.15.7",
+    "@react-native-async-storage/async-storage": "1.15.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.9.2",
     "@react-navigation/native": "5.7.6",
     "@react-navigation/stack": "5.9.3",
     "axios": "0.18.0",
+    "firebase": "8.6.7",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-image-picker": "3.2.1",
+    "react-native-loading-spinner-overlay": "2.0.0",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "2.11.0",
+    "react-native-text-truncate": "0.0.4",
     "react-native-vector-icons": "8.1.0",
     "react-redux": "6.0.1",
     "redux": "4.0.1",
