--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,5 +34,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://naver.jfrog.io/artifactory/maven/'
+        }
     }
 }
