--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-picker": "3.2.1",
     "react-native-loading-spinner-overlay": "2.0.0",
+    "react-native-nmap": "0.0.66",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "2.11.0",
