--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.15.4",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "5.9.2",
     "@react-navigation/native": "5.7.6",
     "@react-navigation/stack": "5.9.3",
     "axios": "0.18.0",
     "firebase": "8.6.7",
+    "net": "1.0.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "1.10.3",
@@ -31,7 +33,9 @@
     "react-redux": "6.0.1",
     "redux": "4.0.1",
     "redux-promise": "0.6.0",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "sockjs-client": "1.5.2",
+    "stompjs": "2.3.3"
   },
   "devDependencies": {
     "@babel/core": "7.15.0",
