--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "net": "1.0.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-geolocation-service": "5.3.0-beta.3",
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-picker": "3.2.1",
     "react-native-loading-spinner-overlay": "2.0.0",
