--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "5.9.2",
+    "@react-navigation/drawer": "5.12.5",
     "@react-navigation/native": "5.7.6",
     "@react-navigation/stack": "5.9.3",
     "axios": "0.18.0",
