--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "net": "1.0.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-android-dialog-picker": "0.1.0",
     "react-native-dialog": "6.1.2",
     "react-native-geolocation-service": "5.3.0-beta.3",
     "react-native-gesture-handler": "1.10.3",
